# evhutils

./: LICENSE  README.md  pyproject.toml
evh_utils/: BytestringParser.py
examples/: LayoutSystem.py  ToonDNA_with_parser.py
src/: layout_element.py
src/evh_utils/: BytestringParser.py  LayoutElement.py
tests/: test_bytestring_parser.py
